# Praxis_AgenticOSKernel

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  TASKS.md  install.sh  praxis-system-prompt.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: escalation-boundary.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.praxis/hooks/: pre_tool_use.py  test_pre_tool_use.py
.praxis/memory/: coverage-report.md  e2-assessment.md  first-live-run.md  morning-handoff.md  phase-e1-plan.md  phase-g-plan.md  phase0-plan.md  phase4-wave2-plan.md  phase4-wave2-survey.md  phase4-wave3-plan.md  phase4-wave4-plan.md  phase4-wave4-survey.md  pipeline-validation-report.md  runtime-abstraction-plan.md  unattended-readiness.md  workload-test.md
.praxis/staging/: escalation-boundary-patch.md
demo/: demo.sh
praxis/: __init__.py  __main__.py  checkpoint.py  config.py  config_wizard.py  hooks.py  orchestrator.py  queue_runner.py  subagents.py  tools.py
praxis/integrations/: __init__.py  calendar.py  email.py  files.py  web.py
praxis/runtime/: __init__.py  base.py  claude_code.py  cloud.py
tests/: conftest.py  test_cloud_runtime.py  test_config.py  test_config_wizard.py  test_hooks.py  test_integrations.py  test_orchestrator.py  test_runtime.py  test_subagents.py  test_tools.py
