[project]
name = "praxis"
version = "0.1.0"
description = "Minimal orchestrator for the Praxis agentic OS"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
local = [
    "openai>=1.0",
]
cloud = [
    "openai>=1.0",
]
analyze = [
    "coverage",
    "radon",
    "pylint",
    "pip-audit",
]
dev = [
    "pytest>=8.0",
]
all = [
    "praxis[local]",
    "praxis[cloud]",
    "praxis[analyze]",
    "praxis[dev]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
